# dl-experiments

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
blog/: generate_figures.py  generate_t11_figures.py  post.md
blog/whitecircle/: linkedin_post.md  post_accessible.md  x_twitter_thread.md
data/text_completions/: contrastive_pairs.json  generate_completions.py  prompts.json  prompts_extended.json
data/text_completions/qwen3-4b-instruct-2507/: completions.json  completions_extended.json
data/text_completions/qwen3-4b-thinking-2507/: completions.json
data/text_completions/qwen3.5-4b/: completions.json
experiments/acestep_v15/: README.md  run.py
experiments/acestep_v15/results/: configs.json  summary.json
experiments/fish_speech_s2_pro/: README.md  run.py
experiments/fish_speech_s2_pro/results/: config.json  tensor_map.json  weight_statistics.json
experiments/layer_shuffle_recovery/: README.md  generate_calibration.py  run.py
experiments/t11_quantization/: README.md  run.py
experiments/t15_normalization/: README.md  run.py
experiments/t17_contrastive_trajectories/: README.md  run.py
experiments/t18_spectral_guided_peft/: README.md  run.py
experiments/t1_logit_lens/: README.md  run.py
experiments/t2_layer_knockout/: README.md  run.py
experiments/t3_layer_swap_cost/: README.md  run.py
experiments/t4_residual_stream_geometry/: README.md  run.py
experiments/t7_layer_linearization_gap/: README.md  run.py  run_part6.py  run_part7.py  run_v2.py
experiments/t9_weight_spectral_structure/: README.md  run.py
(+36 files in other folders)
