[project]
name = "dl-experiments"
version = "0.1.0"
description = "Deep Learning Experiments"
authors = [
    {name = "dl-researcher"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "torchaudio (>=2.10.0,<3.0.0)",
    "numpy (>=1.24,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "datasets (>=4.8.3,<5.0.0)",
    "transformers (>=4.57.0,<5.0.0)",
    "accelerate (>=1.13.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "einops (>=0.8.2,<0.9.0)",
    "vllm (>=0.18.0,<0.19.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "diffusers (>=0.37.0,<0.38.0)",
    "peft (>=0.18.1,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
